<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2013 Young Bin Han

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>

    <string name="app_name">SidePanel</string>
    <string name="button_appinfo">Application Information</string>
    <string name="title_activity_appinfo">About this app</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="title_activity_side_panel">!SidePanel!</string>
    <string name="title_activity_notices">Third-Party Notices</string>
    <string name="menu_settings" />
    <string name="pref_service_toggle">Enable Service</string>
    <string name="pref_service_toggle_sub">Check to Enable SidePanel Service</string>
    <string name="title_activity_home">Home</string>
    <string name="hello_world">Hello world!</string>
    <string name="label_settings">Settings</string>
    <string name="label_sum_settings">Change SidePanel Settings</string>
    <string name="action_settings"></string>
    <string name="pref_auto">Start on boot</string>
    <string name="pref_auto_sub">Check to start service on boot</string>
    <string name="pref_guide">Tutorial</string>
    <string name="pref_guide_sub">SidePanel Tutorial</string>
    <string name="pref_blog">Visit the blog</string>
    <string name="pref_blog_sub">hybdms.blogspot.com</string>
    <string name="pref_appinfo">About this app</string>
    <string name="pref_appinfo_sub">Some information about SidePanel</string>
    <string name="info_updatecheck">Check for updates</string>
    <string name="info_feedback">Send feedback</string>
    <string name="info_thirdparty">Third-Party notices</string>
    <string name="pref_previously_started">firstrun</string>
    <string name="title_activity_guide">Tutorial</string>
    <string name="guide_welcome">WELCOME!</string>
    <string name="guide_welcome_info">Know how to use SidePanel before using it</string>
    <string name="guide_welcome_continue">Slide right to left to continue</string>
    <string name="guide_2_1">Check &quot;Enable Service&quot; to enable service</string>
    <string name="guide_3_1">Swipe from edge to open panel</string>
    <string name="guide_3_2">Click item to switch to other app</string>
    <string name="guide_4_ready">Ready to Use!</string>
    <string name="guide_4_close">Click &quot;Close Tutorial&quot; to close Tutorial</string>
    <string name="guide_close">Close Tutorial</string>
    <string name="guide_welcome_close">To Skip, Click &quot;Close Tutorial&quot;</string>
    <string name="title_activity_changelogs">Change Logs</string>
    <string name="pref_panelpos_right">Use right side panel</string>
    <string name="pref_panelpos_right_sub">Use right side panel instead of left side panel</string>
    
    <string-array name="itembg_value">
    <item>defaults</item>
    <item>dark</item>
    <item>light</item>
    <item>none</item>
    </string-array>
    
    <string-array name="itembg_string">
    <item>default</item>
    <item>dark</item>
    <item>light gray</item>
    <item>none</item>
    </string-array>
    
    <string-array name="panelbg_value">
    <item>dark</item>
    <item>light</item>
    </string-array>
    
    <string-array name="panelbg_string">
    <item>dark</item>
    <item>light</item>
    </string-array>
    
    <string name="pref_itembg">Item background</string>
    <string name="pref_itembg_sub">Change panel item background</string>
    <string name="pref_panelbg">Panel background color</string>
    <string name="pref_panelbg_sub">Change panel background color</string>
    <string name="guide_itembg">Use "Item background" option\n to change item background</string>
    <string name="guide_panelbg">Use "Panel background color"option\n to change panel background color</string>
    <string name="service_running">SidePanel Service</string>
    <string name="service_running_desc">Click to configure</string>
    <string name="service_notification">SidePanel Service is running</string>
    <string name="pref_notification">Show Notification</string>
    <string name="pref_notification_desc">Check to show notification when Service is running</string>
    <string name="pref_detector_width">Touch Detector Width</string>
    <string name="pref_detector_width_desc">Change Touch Detector Width value</string>
    <string name="pref_detector_height">Touch Detector height</string>
    <string name="pref_detector_height_desc">Change Touch Detector height value</string>
    
    <string-array name="detector_width_value">
    <item>025</item>
    <item>050</item>
    <item>075</item>
    <item>100</item>
    <item>200</item>
    <item>300</item>
    <item>400</item>
    </string-array>
    
    <string-array name="detector_width_string">
    <item>0.25*default</item>
    <item>0.5*default</item>
    <item>0.75*default</item>
    <item>default</item>
    <item>2*default</item>
    <item>3*default</item>
    <item>4*default</item>
    </string-array>
    
    <string-array name="detector_height_value">
    <item>025</item>
    <item>050</item>
    <item>075</item>
    <item>100</item>
    <item>200</item>
    <item>300</item>
    <item>400</item>
    </string-array>
    
    <string-array name="detector_height_string">
    <item>0.25*default</item>
    <item>0.5*default</item>
    <item>0.75*default</item>
    <item>default</item>
    <item>2*default</item>
    <item>3^default</item>
    <item>4*default</item>
    </string-array>
    
    <string name="pref_vibrate">Enable Vibrate</string>
    <string name="pref_vibrate_desc">vibrate when opening panel</string>
    
    <string-array name="detector_pos_string">
    <item>Top</item>
    <item>Center</item>
    <item>Bottom</item>
    </string-array>
    
    <string-array name="detector_pos_value">
    <item>top</item>
    <item>center</item>
    <item>bottom</item>
    </string-array>
    
    <string name="pref_detector_pos">Touch Detector Position</string>
    <string name="pref_detector_pos_desc">Change Touch Detector Position</string>
    <string name="pref_group_panel">Panel Settings</string>
    <string name="pref_group_trigger">Touch Trigger Settings</string>
    <string name="pref_panelcontents_list">Things to show on panel</string>
    <string name="pref_panelcontents_list_sub">Select the things to show on panel</string>
    
        <string-array name="panelcontents_string">
    <item>Recent Apps</item>
    <item>Running Apps</item>
    </string-array>
    
    <string-array name="panelcontents_value">
    <item>recent</item>
    <item>running</item>
    </string-array>
    
    <string name="pref_appversion">App Version</string>
    <string name="pref_appversion_sub">0.8.3(beta)</string>
</resources>
